--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jszip": "^3.2.2",
     "line-reader": "^0.4.0",
     "md5": "^2.2.1",
+    "moment": "^2.29.1",
     "pdfmake": "^0.1.65",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
