--- a/package.json
+++ b/package.json
@@ -1,47 +1,45 @@
 {
-  "name": "vacina",
+  "name": "cmtt-multas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.7",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/data-grid": "^4.0.0-alpha.33",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@react-spring/web": "^9.0.0-beta.34",
+    "@stardust-ui/docs-components": "^0.40.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "babel": "^6.23.0",
-    "bootstrap": "^4.4.1",
-    "datatables.net": "^1.10.20",
-    "datatables.net-bs4": "^1.10.20",
-    "datatables.net-buttons-bs4": "^1.6.1",
-    "datatables.net-responsive-bs4": "^2.2.3",
-    "fs-then-native": "^2.0.0",
     "gmaps": "^0.4.25",
+    "install": "^0.13.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.15",
     "jszip": "^3.2.2",
     "line-reader": "^0.4.0",
-    "md5": "^2.2.1",
     "moment": "^2.29.1",
     "pdfmake": "^0.1.65",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^1.6.1",
     "react-bootstrap-table": "^4.3.1",
     "react-breadcrumbs": "^2.1.7",
     "react-dom": "^16.13.1",
-    "react-jqueryui": "^0.1.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
-    "react-simple-chatbot": "^0.6.1",
-    "react-via-cep": "^2.0.8",
-    "reactjs-pdf-reader": "^1.0.9",
     "readline": "^1.3.0",
+    "redux-thunk": "^2.3.0",
     "resize-base64": "^1.0.12",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.0.1",
-    "sweetalert2": "^10.14.0",
+    "styled-components": "^5.3.0",
+    "sweetalert2": "^10.16.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -67,5 +65,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   }
 }
