--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-breadcrumbs": "^2.1.7",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
