--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cmtt-multas",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "main": "index.js",
   "private": true,
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
@@ -17,7 +18,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
-    "babel": "^6.23.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-regenerator-runtime": "^6.5.0",
+    "css-loader": "^6.2.0",
     "gmaps": "^0.4.25",
     "install": "^0.13.0",
     "jspdf": "^2.3.1",
@@ -41,13 +45,15 @@
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.3.0",
     "sweetalert2": "^10.16.9",
+    "to-string-loader": "^1.1.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-web": "webpack"
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +74,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "babel-jest": "^27.0.6",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.14",
+    "html-webpack-plugin": "4",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "regenerator-runtime": "^0.13.7",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.1.1"
   }
 }
