--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "start-web": "webpack-dev-server --inline --hot",
     "build-web": "webpack"
   },
   "eslintConfig": {
@@ -75,7 +76,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^26.6.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
