--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.13.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-moment": "^1.1.1",
+    "react-number-format": "^5.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "readline": "^1.3.0",
